links added & contrast fixed(about company)

--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -74,6 +74,7 @@ pre {
    */
 
 a {
+    height: 30px;
     background-color: transparent;
 }
 
