--- a/assets/css/rodapie/footer.css
+++ b/assets/css/rodapie/footer.css
@@ -134,7 +134,7 @@
 
 .footer-distributed .footer-company-about {
     line-height: 20px;
-    color: #92999f;
+    color: lightgray;
     font-size: 13px;
     font-weight: normal;
     margin: 0;
